<resources>

    <string name="app_name">Fiteso</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_logout">LogOut</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="notUserYey">¿Aún no eres usuario? Registrate</string>
    <string name="AlreadyUser">¿Ya eres usuario? Inicia Sesion</string>
    <string name="IngresaNombre">Ingresa tu nombre</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Activity Splash -->
    <string name="activity_splash_label">WELCOME TO FITESO</string>
    <string name="title_activity_menu">ActivityMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">ActivityProfile</string>


    <string name="perfil">Perfil</string>
    <string name="rutina">Rutina</string>
    <string name="crear_rutina">Crear Rutina</string>
    <string name="explorar">Explorar</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="practicas_deporte">¿Practicas algún deporte dentro del ITESO?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="siguiente">Siguiente</string>


    <string-array name="deportesenIteso">
        <item>Atletismo</item>
        <item>Animación</item>
        <item>Básquetbol</item>
        <item>Béisbol</item>
        <item>Fútbol</item>
        <item>Kendo</item>
        <item>Rugby</item>
        <item>Tae Kwon Do</item>
        <item>Tenis</item>
        <item>Tochito</item>
        <item>Voleibol</item>
        <item>Voleibol Playa</item>
        <item>Gimnasio/fitness</item>
        <item>Ninguno</item>
    </string-array>
    <string name="title_activity_explorar">ActivityExplorar</string>
    <string name="nav_header_title">Fiteso</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_section_Rutinas">Rutinas</string>
    <string name="title_section_Ejercicios">Ejercicios</string>

    <string name="erik_mail">erik@gmail.com</string>
    <string name="erik_bustos">Erik Bustos</string>
    <string name="erik_bustos_edad">19 años</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="guardar">Guardar</string>
    <string name="deporte">Deporte</string>

    <string name="title_activity_configuracion">Activity Configuración</string>

</resources>
